added on heroku for node

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "\"a complete web dev with node express full stack site\"",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start":"node src/index.js"
   },
   "author": "dipesh khedkar",
   "license": "ISC",
